Fix layout bug - caused when thumbnails that float left directly follow thumbnails that float left

--- a/ArticleTemplates/assets/scss/modules/_figure.scss
+++ b/ArticleTemplates/assets/scss/modules/_figure.scss
@@ -207,4 +207,8 @@ figure {
     @include mq($from: col4) {
         margin: 4px 0 12px -220px;
     }
+
+    & + .figure--thumbnail-with-caption {
+        clear: left;
+    }
 }
